--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <meta property="og:site_name" content="Restaurant" />
       <meta property="fb:admins" content="357224804480382" />
       <!--End FB Share-->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" id="r_favicon" href="favicon.ico">
   <link href="assets/style/font_style.css" rel="stylesheet">
   <link href="assets/style/screen.css" rel="stylesheet">
   <link id="appCSS" href="javascript:void(0)" rel="stylesheet">
