--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <!--End FB Share-->
   <link rel="icon" type="image/x-icon" id="r_favicon" href="favicon.ico">
   <link href="assets/style/font_style.css" rel="stylesheet">
-  <!-- <link href="assets/style/screen.css" rel="stylesheet"> -->
+  <link href="assets/style/screen.css" rel="stylesheet">
   <link id="appCSS" href="javascript:void(0)" rel="stylesheet">
   <script src="//maps.googleapis.com/maps/api/js?v=3.29&key=AIzaSyCXT_lsfclOy7_1PHp2lFfoM-Ujwb3-cdA&libraries=places,geometry"></script>
 </head>
